Trying to redirect to build/insex.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://http://miratop-dev.github.io/miratop/index.html">
+<meta http-equiv="refresh" content="0; url=https://http://miratop-dev.github.io/miratop/buld/index.html">
